arm64-board: ART EXECUTES JAVA on the board (daemon-detach fix)
Fixed the daemon-thread abort: Thread::ThreadExitCallback went FATAL when an ART
daemon exited without DetachCurrentThread during Runtime::Start (over-strict on
non-bionic OHOS musl). Patched patches/runtime/thread.cc: 2nd-call branch warns +
clears TLS self instead of LOG(FATAL); rebuilt the arm64 dalvikvm. Result: the
runtime comes up and RUNS JAVA — Hello2 computes sum(1..1000)=500500,
System.exit(500500%200) yields process exit code 100 (exact), and Hello.main
returns in 38ms running Unsafe CAS/arraycopy. Ladder complete to a live runtime:
toolchain -> libart load -> dalvikvm -> dex2oat -> boot image -> execute Java.
Remaining minor gap: System.out charset encoder null (ICU/charset provider init).
Patch tracked at patches/runtime/thread.cc.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>